centred the years navbar and added margins to the error pages

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -15,6 +15,10 @@ html,body {
   font-size: 50px;
 }
 
+.center-years{
+  padding-left: 30%;
+}
+
 #wrap {
   position: relative;
   min-height: 100%;
