--- a/app/views/errors/error_422.html.haml
+++ b/app/views/errors/error_422.html.haml
@@ -1,10 +1,11 @@
-.page-header
-  %h1 
-    Change Rejected
-    %sup#error-code 422
-  
-%p Maybe you tried to change something you didn't have access to.
+.grouping
+  .page-header
+    %h1
+      Change Rejected
+      %sup#error-code 422
 
-%p 
-  If you continue to see this message please send a description of the problem to:
-  = mail_to "support@epigenesys.org.uk"
+  %p Maybe you tried to change something you didn't have access to.
+
+  %p
+    If you continue to see this message please send a description of the problem to:
+    = mail_to "support@epigenesys.org.uk"
