Can now view secondary navbar from the 2019 pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -96,7 +96,7 @@
 
 
         -#dm years navbar
-        - if current_page?('/dm_hours') || current_page?('/dm_hours_2021') || current_page?('/dm_hours_2022') || current_page?('/dm_hours_2023') || current_page?('/dm_hours_2024') || current_page?('/dm_hours_2025') || current_page?('/dm_hours_2026') || current_page?('/dm_hours_2027') || current_page?('/dm_hours_2028') || current_page?('/dm_hours_2029') || current_page?('/dm_hours_2030')
+        - if current_page?('/dm_hours_2019') || current_page?('/dm_hours') || current_page?('/dm_hours_2021') || current_page?('/dm_hours_2022') || current_page?('/dm_hours_2023') || current_page?('/dm_hours_2024') || current_page?('/dm_hours_2025') || current_page?('/dm_hours_2026') || current_page?('/dm_hours_2027') || current_page?('/dm_hours_2028') || current_page?('/dm_hours_2029') || current_page?('/dm_hours_2030')
           %nav#main-nav.bg-grey.navbar.navbar-dark.navbar-expand-lg
             .center-years
               .container
@@ -152,7 +152,7 @@
                         2030
 
         -#admin years navbar
-        - if current_page?('/manager_hours') || current_page?('/manager_hours_2021') || current_page?('/manager_hours_2022') || current_page?('/manager_hours_2023') || current_page?('/manager_hours_2024') || current_page?('/manager_hours_2025') || current_page?('/manager_hours_2026') || current_page?('/manager_hours_2027') || current_page?('/manager_hours_2028') || current_page?('/manager_hours_2029') || current_page?('/manager_hours_2030')
+        - if current_page?('/manager_hours_2019') || current_page?('/manager_hours') || current_page?('/manager_hours_2021') || current_page?('/manager_hours_2022') || current_page?('/manager_hours_2023') || current_page?('/manager_hours_2024') || current_page?('/manager_hours_2025') || current_page?('/manager_hours_2026') || current_page?('/manager_hours_2027') || current_page?('/manager_hours_2028') || current_page?('/manager_hours_2029') || current_page?('/manager_hours_2030')
           %nav#main-nav.bg-grey.navbar.navbar-dark.navbar-expand-lg
             .center-years
               .container
@@ -210,7 +210,7 @@
 
 
         -#admin month_timeline navbar
-        - if current_page?('/month_timeline') || current_page?('/month_timeline_2021') || current_page?('/month_timeline_2022') || current_page?('/month_timeline_2023') || current_page?('/month_timeline_2024') || current_page?('/month_timeline_2025') || current_page?('/month_timeline_2026') || current_page?('/month_timeline_2027') || current_page?('/month_timeline_2028') || current_page?('/month_timeline_2029') || current_page?('/month_timeline_2030')
+        - if current_page?('/month_timeline_2019') || current_page?('/month_timeline') || current_page?('/month_timeline_2021') || current_page?('/month_timeline_2022') || current_page?('/month_timeline_2023') || current_page?('/month_timeline_2024') || current_page?('/month_timeline_2025') || current_page?('/month_timeline_2026') || current_page?('/month_timeline_2027') || current_page?('/month_timeline_2028') || current_page?('/month_timeline_2029') || current_page?('/month_timeline_2030')
           %nav#main-nav.bg-grey.navbar.navbar-dark.navbar-expand-lg
             .center-years
               .container
@@ -267,7 +267,7 @@
                         2030
 
         -#admin study_hours_timeline navbar
-        - if current_page?('/study_hours_timeline') || current_page?('/sh_timeline_2021') || current_page?('/sh_timeline_2022') || current_page?('/sh_timeline_2023') || current_page?('/sh_timeline_2024') || current_page?('/sh_timeline_2025') || current_page?('/sh_timeline_2026') || current_page?('/sh_timeline_2027') || current_page?('/sh_timeline_2028') || current_page?('/sh_timeline_2029') || current_page?('/sh_timeline_2030')
+        - if current_page?('/study_hours_timeline_2019') || current_page?('/study_hours_timeline') || current_page?('/sh_timeline_2021') || current_page?('/sh_timeline_2022') || current_page?('/sh_timeline_2023') || current_page?('/sh_timeline_2024') || current_page?('/sh_timeline_2025') || current_page?('/sh_timeline_2026') || current_page?('/sh_timeline_2027') || current_page?('/sh_timeline_2028') || current_page?('/sh_timeline_2029') || current_page?('/sh_timeline_2030')
           %nav#main-nav.bg-grey.navbar.navbar-dark.navbar-expand-lg
             .center-years
               .container
