Initial comments on most views

--- a/app/assets/stylesheets/custom_flash.scss
+++ b/app/assets/stylesheets/custom_flash.scss
@@ -1,4 +1,8 @@
-/*The yellow line that comes up telling you to sign in*/
+/**
+ * Design for the flash-messages
+ * Author: epiGenesys
+ * Date: 03/2020
+ */
 @import 'variables';
 @import 'bootstrap/mixins';
 
