--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,3 +1,7 @@
+-# Basic layout for all pages
+-# Author: epiGenesys, Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 !!!
 %html
   %head
@@ -333,4 +337,4 @@
       .container
         %p
           &copy; #{Date.today.year}
-          = link_to 'epiGenesys', 'https://www.epigenesys.org.uk', target: '_blank', title: 'Go to the epiGenesys website'
+          = 'Team 04'
