--- a/app/views/manager_hours/index.html.haml
+++ b/app/views/manager_hours/index.html.haml
@@ -1,4 +1,7 @@
--# Admin Years
+-# Display all data manager working hours for 2020 for admin
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   %h1 Data Manager Working Hours 2020
 
