--- a/app/views/studies/generate_mt.html.haml
+++ b/app/views/studies/generate_mt.html.haml
@@ -1,3 +1,7 @@
+-# Inform admin when the month timeline is generated
+-# Author: Maxime Fontana, Michael Vickers
+-# Date: 04/2020
+
 .grouping
   %h1 Month Timeline correctly generated
 
