--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,3 +1,7 @@
+-# Display user information
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   .scrollable
     %table.table.table-bordered.table-hover
