--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,9 @@
+/**
+ * Basic design for all pages
+ * Author: epiGenesys, Apoorva Singh, Krusha Vekaria
+ * Date: 03/2020
+ */
+
 @import 'variables';
 
 html,body {
