--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -1,3 +1,8 @@
+/**
+ * Adding margins to all pages and formatting for tables
+ * Author: Apoorva Singh, Krusha Vekaria
+ * Date: 04/2020
+ */
 @import 'bootstrap';
 
 .grouping{
