--- a/app/views/manager_hours/dm_hours.haml
+++ b/app/views/manager_hours/dm_hours.haml
@@ -1,3 +1,7 @@
+-# Display all data manager working hours for 2020
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   %h1 Data Manager Working Hours 2020
 
