--- a/app/views/manager_hours/dm_hours_2025.html.haml
+++ b/app/views/manager_hours/dm_hours_2025.html.haml
@@ -1,3 +1,7 @@
+-# Display all data manager working hours for 2025
+-# Author: Maxime Fontana, Michael Vickers
+-# Date: 05/2020
+
 .grouping
   %h1 Data Manager Working Hours 2025
 
