--- a/app/views/studies/index.html.haml
+++ b/app/views/studies/index.html.haml
@@ -1,3 +1,7 @@
+-# Display studies and be able to search for a specific one
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   %h1 Study List
   = simple_form_for :search, url: search_studies_path, method: :post do |f|
