--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -1,3 +1,7 @@
+-# Display tasks associated to a study
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   %h1 Listing Specific Tasks Assigned to Studies
 
