--- a/app/views/studies/month_timeline.html.haml
+++ b/app/views/studies/month_timeline.html.haml
@@ -1,3 +1,7 @@
+-# Display task timeline for 2020
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
 
   %h1 Projected Task Timeline for Studies 2020
