--- a/app/views/studies/month_timeline_2023.html.haml
+++ b/app/views/studies/month_timeline_2023.html.haml
@@ -1,3 +1,7 @@
+-# Display task timeline for 2023
+-# Author: Maxime Fontana, Michael Vickers
+-# Date: 05/2020
+
 .grouping
 
   %h1 Projected Task Timeline for Studies 2023
