--- a/app/views/studies/study_hours_timeline.html.haml
+++ b/app/views/studies/study_hours_timeline.html.haml
@@ -1,3 +1,7 @@
+-# Display study hours timeline for 2020
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
 
   %h1 Study Hours Timeline 2020
