--- a/app/views/studies/study_hours_timeline_2021.html.haml
+++ b/app/views/studies/study_hours_timeline_2021.html.haml
@@ -1,3 +1,7 @@
+-# Display study hours timeline for 2021
+-# Author: Maxime Fontana, Michael Vickers
+-# Date: 05/2020
+
 .grouping
 
   %h1 Study Hours Timeline 2021
