--- a/app/views/study_tasks/index.html.haml
+++ b/app/views/study_tasks/index.html.haml
@@ -1,3 +1,7 @@
+-# Display tasks allocated to a specific study
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   %h1 Tasks Allocated to a Study
   .scrollable
