--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -1,3 +1,7 @@
+-# Display details about tasks
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
 
   %h1 List of Available Tasks & Details
