--- a/app/views/users/data_managers.html.haml
+++ b/app/views/users/data_managers.html.haml
@@ -1,3 +1,7 @@
+-# Display all users for admin to see
+-# Author: Maxime Fontana, Michael Vickers, Krusha Vekaria, Apoorva Singh
+-# Date: 03/2020
+
 .grouping
   %h1 Listing Users
 
