--- a/app/views/studies/study_hours_timeline_2027.html.haml
+++ b/app/views/studies/study_hours_timeline_2027.html.haml
@@ -14,18 +14,18 @@
           %th Name
           %th Lead Manager
           %th Backup Manager
-          %th{:colspan => 2} January
-          %th{:colspan => 2} February
-          %th{:colspan => 2} March
-          %th{:colspan => 2} April
-          %th{:colspan => 2} May
-          %th{:colspan => 2} June
-          %th{:colspan => 2} July
-          %th{:colspan => 2} August
-          %th{:colspan => 2} September
-          %th{:colspan => 2} October
-          %th{:colspan => 2} November
-          %th{:colspan => 2} December
+          %th{:colspan => 3} January
+          %th{:colspan => 3} February
+          %th{:colspan => 3} March
+          %th{:colspan => 3} April
+          %th{:colspan => 3} May
+          %th{:colspan => 3} June
+          %th{:colspan => 3} July
+          %th{:colspan => 3} August
+          %th{:colspan => 3} September
+          %th{:colspan => 3} October
+          %th{:colspan => 3} November
+          %th{:colspan => 3} December
         %tr
           %td
           %td
@@ -33,28 +33,41 @@
           %td
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
           %td Lead
           %td Backup
+          %td Guest
+
 
       %tbody
         - @studies.each do |study|
@@ -65,27 +78,39 @@
             %td= study.backup_manager
             %td= StudyTask.where(study_id: study.study_id, month: 1, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 1, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 1, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 2, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 2, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 2, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 3, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 3, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 3, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 4, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 4, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 4, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 5, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 5, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 5, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 6, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 6, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 6, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 7, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 7, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 7, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 8, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 8, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 8, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 9, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 9, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 9, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 10, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 10, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 10, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 11, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 11, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 11, year: 2027).sum(:guest_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 12, year: 2027).sum(:lead_hours_worked)
             %td= StudyTask.where(study_id: study.study_id, month: 12, year: 2027).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 12, year: 2027).sum(:guest_hours_worked)
 
   %br
