--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -9,7 +9,6 @@
     %table.table.table-bordered.table-hover
       %thead
         %tr
-          %th ID
           %th Name
           %th Study
           %th Lead DM Hours
@@ -23,7 +22,6 @@
       %tbody
         - @study_tasks.each do |study_task|
           %tr
-            %td= study_task.task_id
             %td= study_task.task_name
             %td= study_task.study_id
             %td= study_task.lead_hours_worked
@@ -33,7 +31,8 @@
             %td= study_task.month
             %td= study_task.complete
             %td= link_to 'Manage Hours', edit_study_task_path(study_task)
-            -#%td= link_to 'Hours', hours_management_path(study_task)
+            -#%td= link_to 'Manage Hours', study_tasks_edite_path(study_task.study_id, study_task.year, study_task.month, study_task.task_name)
+            -#%td= link_to 'Hours', hours_management_path(study_task.study_id, study_task.year, study_task.month, study_task.task_name)
 
 
   %br
