--- a/app/views/task_lists/_form2.html.haml
+++ b/app/views/task_lists/_form2.html.haml
@@ -4,7 +4,7 @@
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.input :task_name
+    = f.input :task_name, :readonly => true
     = f.input :predicted_hours
 
 
