End-to-end testing for Users

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -20,5 +20,5 @@
     </div>
   <% end %>
   <br>
-  <%= render "devise/shared/links" %>
+  <%= link_to "Back", new_session_path(resource_name), class: 'btn btn-outline-dark' %>
 </div>
