--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -101,7 +101,7 @@
                       %b.caret
                     .dropdown-menu{ aria: { labelledby: '#navbar-users-link' } }
                       = link_to edit_user_registration_path, class: 'dropdown-item', title: "Change your password" do
-                        = icon 'fas', 'lock-open', 'Change Password'
+                        = icon 'fas', 'lock-open', 'Change password'
                       = link_to destroy_user_session_path, class: 'dropdown-item', method: :delete, title: "Log out of the system" do
                         = icon 'fas', 'sign-out-alt', 'Log out'
 
