removed forgotten password link from render links file

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -6,8 +6,11 @@
   <%= link_to "Back", new_session_path(resource_name), class: 'btn btn-outline-dark' %>
 <% end %>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name), class: 'btn btn-outline-dark' %>
+<% if false %>
+  code to be commented out...
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+    <%= link_to "Forgot your password?", new_password_path(resource_name), class: 'btn btn-outline-dark' %>
+  <% end %>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
