--- a/app/views/studies/index.html.haml
+++ b/app/views/studies/index.html.haml
@@ -48,7 +48,7 @@
             %td= link_to 'Tasks', get_tasks_path(study.study_id)
             %td= link_to 'Add Task', add_related_task_path(study.study_id)
             - if study.generated == false
-              %td= button_to 'Generate Month Timeline', generate_mt_path(study.study_id, study.type_of, study.start_date, study.lplv)
+              %td= button_to 'Generate Month Timeline', generate_mt_path(study.study_id, study.type_of, study.start_date, study.lplv), class: "btn btn-outline-dark"
 
             -#%td= link_to 'Add Hours as Guest', edit_study_path(study)
   %br
