--- a/app/views/studies/index.html.haml
+++ b/app/views/studies/index.html.haml
@@ -45,7 +45,7 @@
             %td= study.lplv.to_time.advance(:months => 2).to_date.strftime('%d/%m/%Y')
             %td= study.study_finished
             %td= link_to 'Edit', edit_study_path(study)
-            %td= link_to 'Tasks', get_tasks_path(study.study_id)
+            %td= link_to 'View Tasks', get_tasks_path(study.study_id)
             %td= link_to 'Add Task', add_related_task_path(study.study_id)
             - if study.generated == false
               %td= button_to 'Generate Month Timeline', generate_mt_path(study.study_id, study.type_of, study.start_date, study.lplv), class: "btn btn-outline-dark"
